--- a/package.json
+++ b/package.json
@@ -8,12 +8,5 @@
   },
   "keywords": [],
   "author": "ravitej",
-  "license": "ISC",
-  "dependencies": {
-    "ejs": "^3.1.10",
-    "ejs-mate": "^4.0.0",
-    "express": "^5.1.0",
-    "method-override": "^3.0.0",
-    "mongoose": "^8.18.0"
-  }
+  "license": "ISC"
 }
