--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "ravitej",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "joi": "^18.0.1"
+  }
 }
